// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj"
  >
     
    <span>
      Default
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj iconOnly large"
  >
    <i
      class="material-icons svelte-j6xhgj"
    >
      play_arrow
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Large Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj large"
  >
    <i
      class="material-icons svelte-j6xhgj"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj primary"
  >
     
    <span>
      Primary
    </span>
  </button>
</section>
`;

exports[`Storyshots Components/Button Primary Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj primary iconOnly"
  >
    <i
      class="material-icons svelte-j6xhgj"
    >
      volume_up
    </i>
     
  </button>
</section>
`;

exports[`Storyshots Components/Button Text And Icon 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="svelte-j6xhgj"
  >
    <i
      class="material-icons svelte-j6xhgj"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
  </button>
</section>
`;
